--- a/index.html
+++ b/index.html
@@ -1,173 +1,53 @@
 {
-    "studentsinfo": [
-        {
-                "id": "100",
-                "name": "Nurujjaman Pollob",
-                "email": "nurujjamanpollob@gmail.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "male",
-                "phone": {
-                    "mobile": "+8801856498616",
-                    "home": "00 123456",
-                    "office": "00 321654"
-                }
-        },
-        {
-                "id": "101",
-                "name": "Shaon ALI",
-                "email": "shaonali@gmail.com",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "sociallink": "www.facebook.com/nurujjamanpollobmedia",
-                "gender" : "male",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 321654"
-                }
-        },
-        {
-                "id": "103",
-                "name": "Binte Khan Farzan",
-                "email": "barthe@example.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "male",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 321654"
-                }
-        },
-        {
-                "id": "104",
-                "name": "Mahfuzur Rahman",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "email": "deane@example.com",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "male",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        },
-        {
-                "id": "105",
-                "name": "Gerard",
-                "email": "gerard@example.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "female",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        },
-        {
-                "id": "106",
-                "name": "Janet",
-                "email": "janet@example.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "female",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        },
-        {
-                "id": "107",
-                "name": "Jasper",
-                "email": "jasper@example.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "male",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        },
-        {
-                "id": "108",
-                "name": "Juliane",
-                "email": "juliane@example.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "female",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        },
-        {
-                "id": "109",
-                "name": "Sampson",
-                "email": "sampson@example.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "male",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        },
-        {
-                "id": "110",
-                "name": "Oswyne",
-                "email": "oswyne@hotmail.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "male",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        },
-        {
-                "id": "111",
-                "name": "Walter",
-                "email": "walter@live.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "male",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        },
-        {
-                "id": "112",
-                "name": "Peires",
-                "email": "peires@outlook.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "male",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        },
-        {
-                "id": "113",
-                "name": "Mabell",
-                "email": "mabell@example.com",
-                "sociallink": "www.facebook.com/nurujjamanpollob",
-                "address": "House #33, ABC Lane, ABC CITY 06987",
-                "gender" : "female",
-                "phone": {
-                    "mobile": "+1 1234567890",
-                    "home": "00 123456",
-                    "office": "00 123456"
-                }
-        }
-    ]
+	
+	"studentsinfo": [
+
+	{
+
+	"id": "00",
+	"name": "Nurujjaman Pollob",
+	"email": "nurujjamanpollob@gmail.com",
+	"bio": "Hello I am Nurujjaman Pollob",
+	"profilephoto": "https://avatars.githubusercontent.com/u/50063598?s=60&v=4",
+	"sociallink": "https://www.linkedin.com/in/nurujjamanpallab",
+	"address": "Dhaka, Bangladesh",
+	"gender": "male",
+	"phone": {
+
+	"mobile": "+881856498616",
+	"home": "+881856498616",
+	"office": "+881856498616"
+	}
+
+
+
+
+},
+
+
+{
+
+	"id": "01",
+	"name": "methew5874",
+	"email": "methew5874@gmail.com",
+	"bio": "Hello I am methew5874",
+	"profilephoto": "https://fiverr-res.cloudinary.com/t_profile_original,q_auto,f_auto/attachments/profile/photo/657851c3f538bfb63eee862ca39763e1-1598972295895/f2ebdacc-d919-4d38-b910-bac39e41e0cd.jpg",
+	"sociallink": "https://www.fiverr.com/methew5874",
+	"address": "United States",
+	"gender": "male",
+	"phone": {
+
+	"mobile": "Your no",
+	"home": "Your No",
+	"office": "Your no"
+	}
+
+
+
+
+}
+
+	]
+
+
 }
